fix jshell invocation