@@ -49,7 +49,8 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <scripts></scripts>
+                            <options>--enable-preview</options>
+                            <scripts>${project.basedir}/src/main/jshell/krei.jsh</scripts>
                         </configuration>
                     </plugin>
                 </plugins>
